change new chat item
