# routes/api.php
@@ -13,9 +13,12 @@ Route::middleware('auth:api')->group(function () {
     Route::post('/logout', [\App\Http\Controllers\API\AuthController::class, 'logout']);
     Route::post('/user/profile', [\App\Http\Controllers\API\AuthController::class, 'profile']);
     Route::post('/user/password', [\App\Http\Controllers\API\AuthController::class, 'updatePassword']);
-    Route::post('/topics', [\App\Http\Controllers\API\TopicController::class, 'create']);
-    Route::put('/topics/{id}', [\App\Http\Controllers\API\TopicController::class, 'update']);
-    Route::delete('/topics', [\App\Http\Controllers\API\TopicController::class, 'destroy']);
+
+    Route::middleware(\App\Http\Middleware\AdminMiddleware::class)->group(function (){
+        Route::post('/topics', [\App\Http\Controllers\API\TopicController::class, 'create']);
+        Route::post('/topics/{id}', [\App\Http\Controllers\API\TopicController::class, 'update']);
+        Route::delete('/topics', [\App\Http\Controllers\API\TopicController::class, 'destroy']);
+    });
 
     Route::get('/chat/{chat}', [\App\Http\Controllers\API\ChatController::class, 'show']);
     Route::post('/chat/delete/{chat}',[\App\Http\Controllers\API\ChatController::class, 'delete']);
@@ -30,7 +33,7 @@ Route::middleware('auth:api')->group(function () {
 Route::get('/topics', [\App\Http\Controllers\API\TopicController::class, 'index']);
 Route::middleware([\App\Http\Middleware\LimitGuestApiWithDB::class])->group(function () {
     Route::post('/chat', [\App\Http\Controllers\API\ChatController::class, 'create']);
-    Route::post('/chat/topic', [\App\Http\Controllers\API\ChatController::class, 'createWithTopic']);
+    Route::post('/new/chat/topic', [\App\Http\Controllers\API\ChatController::class, 'createWithTopic']);
 });
 
 // Admin routes
